--- a/app/index.less
+++ b/app/index.less
@@ -2,8 +2,8 @@
 @import './styles';
 
 // Components
-@import './components/Main/styles';
 @import './components/Quote/styles';
+@import './components/ListCharacters/styles';
 
 // Pages
 @import './pages/Home/styles';
