--- a/app/pages/Home/Results/styles.less
+++ b/app/pages/Home/Results/styles.less
@@ -1,7 +1,4 @@
 .results {
-  height: 100vh;
-
-  .center-container {
-    display: inline-block;
-  }
+  min-height: 100vh;
+  position: relative;
 }
