--- a/app/pages/Home/Hero/styles.less
+++ b/app/pages/Home/Hero/styles.less
@@ -1,17 +1,19 @@
 .hero {
+  position: relative;
   height: 100vh;
 
   .center-container {
-    top: 35%;
+    max-width: 50rem;
+    top: 40%;
   }
 }
 
 .logo {
-  width: 15rem;
+  width: 100%;
   display: block;
   margin: 0 auto 5rem auto;
 
   @media (min-width: @screen-phone) {
-    width: 25rem;
+    padding: 0 5rem;
   }
 }
