Added section component

--- a/app/index.less
+++ b/app/index.less
@@ -2,6 +2,7 @@
 @import './styles';
 
 // Components
+@import './components/Section/styles';
 @import './components/ContainerCenter/styles';
 @import './components/Quote/styles';
 @import './components/ListCharacters/styles';
