Added page component

--- a/app/pages/Home/Hero/styles.less
+++ b/app/pages/Home/Hero/styles.less
@@ -2,7 +2,7 @@
   position: relative;
   height: 100vh;
 
-  .center-container {
+  .container-center {
     max-width: 50rem;
     top: 40%;
   }
@@ -13,7 +13,7 @@
   display: block;
   margin: 0 auto 5rem auto;
 
-  @media (min-width: @screen-phone) {
+  @media (min-width: @screen-desktop) {
     padding: 0 5rem;
   }
 }
