--- a/app/components/ContainerCenter/styles.less
+++ b/app/components/ContainerCenter/styles.less
@@ -1,6 +1,11 @@
 .container-center {
   top: 50%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
+  position: relative;
+  transform: translateY(-50%);
+
+  @media (min-width: @screen-phone) {
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+  }
 }
