--- a/app/pages/Home/Hero/styles.less
+++ b/app/pages/Home/Hero/styles.less
@@ -3,8 +3,17 @@
   height: 100vh;
 
   .container-center {
-    max-width: 50rem;
+    position: relative;
+    max-width: 40rem;
     top: 40%;
+    transform: translateY(-50%);
+    left: 0;
+
+    @media (min-width: @screen-phone) {
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
 
